Se agrega el usuario al Store

--- a/src/app/paginas/admin/administracion/usuario/usuario-form/usuario-form.component.html
+++ b/src/app/paginas/admin/administracion/usuario/usuario-form/usuario-form.component.html
@@ -3,24 +3,107 @@
     <div class="row">
       <div class="col-md-12 mr-auto ml-auto">
         <div class="card card-wizard" data-color="uft" id="wizardProfile">
-          <form>
-            <div class="card-header text-center">
-              <h3 class="card-title">
-                Fomulario
-              </h3>
-              <h5 class="card-description">This information will let us know more about you.</h5>
-            </div>
-            <div class="card-footer">
-              <div class="mr-auto">
-                <input type="button" class="btn btn-previous btn-fill btn-primary btn-wd disabled" name="previous"
-                  value="Anterior">
-              </div>
-              <div class="ml-auto">
+          <div class="card-header text-center">
+            <h3 class="card-title">
+              Fomulario
+            </h3>
+            <h5 class="card-description">This information will let us know more about you.</h5>
+          </div>
+          <div class="card-body">
+            <form [formGroup]="formulario">
+              <div class="row">
+                <div class="col-sm-6">
+                  <mat-form-field>
+                    <input matInput placeholder="Nombre" formControlName="nombre" autocomplete="off" type="text"
+                      name="nombre" />
+                  </mat-form-field>
+                </div>
+                <div class="col-sm-6">
+                  <mat-form-field>
+                    <input matInput placeholder="Apellidos" formControlName="apellidos" autocomplete="off" type="text"
+                      name="apellidos" />
+                  </mat-form-field>
+                </div>
+                <div class="col-sm-12">
+                  <mat-form-field>
+                    <input matInput placeholder="Email" formControlName="email" autocomplete="off" type="email"
+                      name="email" />
+                  </mat-form-field>
+                </div>
+                <div class="col-sm-12">
+                  <mat-form-field *ngIf="usuario.id==0">
+                    <input matInput placeholder="Password" formControlName="password" autocomplete="off" type="password"
+                      name="password" />
+                  </mat-form-field>
+                </div>
 
+                <div class="col-sm-12">
+                  <div class="card ">
+                    <table class="table table-sm table-hover mb-1">
+                      <thead>
+                        <tr>
+                          <th>#</th>
+                          <th>Rol</th>
+                          <th>Descripción</th>
+                          <th colspan="2">
+                            Permisos
+                            <button type="button" class="btn btn-primary btn-sm px-2 my-0 float-right"
+                              (click)="agregarRol()">
+                              Agregar rol
+                            </button>
+                          </th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let rol of usuario.roles; let index = index;">
+                          <td> {{index+1}} </td>
+                          <td> {{rol.nombre}} </td>
+                          <td> {{rol.descripcion}} </td>
+                          <td>
+                            <span matTooltip="{{ rol.privilegiosString }}"
+                              matTooltipClass="multiline-tooltip privilegios" mat-raised-button
+                              matTooltipPosition="above">
+                              ver permisos
+                            </span>
+
+                          </td>
+                          <td class="text-right py-0">
+                            <button type="button" (click)="eliminarRol(rol.id)" class="btn  btn-sm btn-link py-1 my-0">
+                              <i class="material-icons text-danger">delete</i>
+                            </button>
+                          </td>
+                        </tr>
+
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+
+
+                <!-- <mat-form-field>
+                <mat-select placeholder="Rol" name="rol" formControlName="rol"
+                  (selectionChange)="rolesChange($event.value)">
+                  <mat-option *ngFor="let rol of usuario.roles" [value]="rol.id">
+                    {{ rol.nombre }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field> -->
               </div>
-              <div class="clearfix"></div>
+
+            </form>
+
+
+          </div>
+          <div class="card-footer">
+            <div class="mr-auto">
+              <button type="button" class="btn btn-muted btn-sm" (click)="volver()">Volver</button>
             </div>
-          </form>
+            <div class="ml-auto">
+              <button type="button" class="btn btn-primary btn-sm" (click)="guardar()">Guardar</button>
+            </div>
+
+            <div class="clearfix"></div>
+          </div>
         </div>
       </div>
     </div>
