--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="copyright pull-right">
       &copy;
-      {{ year | date: 'yyyy' }}, hecho por tu hermanito <i class="fa fa-heart heart pl-1"></i>
+      {{ year | date: 'yyyy' }}, hecho por tu hermanito <i class="fa fa-heart heart pl-1 text-danger"></i>
     </div>
   </div>
 </footer>
