--- a/src/app/paginas/password/password-index/password-index.component.html
+++ b/src/app/paginas/password/password-index/password-index.component.html
@@ -14,7 +14,7 @@
                 </div>
                 <!-- / Logo -->
 
-                <h4 class="text-center text-muted font-weight-normal mb-4">Cambia tu clave</h4>
+                <h4 class="text-center text-muted font-weight-normal mb-4">{{title}}</h4>
 
                 <!-- Form -->
                 <form [formGroup]="formularioPassword" class="my-3">
