--- a/src/app/paginas/admin/administracion/usuario/usuario-form/usuario-form.component.html
+++ b/src/app/paginas/admin/administracion/usuario/usuario-form/usuario-form.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header">
-    <h3 class="card-title">
+    <h3 class="card-title mb-0">
       {{accion}}&nbsp;Usuario
     </h3>
 
