--- a/src/app/paginas/password/password-index/password-index.component.html
+++ b/src/app/paginas/password/password-index/password-index.component.html
@@ -19,34 +19,40 @@
                 <!-- Form -->
                 <form [formGroup]="formularioPassword" class="my-3">
                     <div class="form-group">
+
                         <label class="form-label">Clave</label>
-                        <input formControlName="password" name="password" (keydown.enter)="cambiar()" type="password"
+                        <ng2-password-strength-bar style="display: inline-flex; float: right;"
+                            [passwordToCheck]="formularioPassword.controls['password'].value" [barColors]="myColors">
+                        </ng2-password-strength-bar>
+                        <input formControlName="password" name="password" (keydown.enter)="finalizar()" type="password"
+                            autocomplete="off"
                             [ngClass]="{'is-invalid': formularioPassword.controls['password'].touched && formularioPassword.controls['password'].invalid}"
                             class="form-control">
-                        <small class="invalid-feedback">
+
+                        <!-- <small class="invalid-feedback">
                             <p
                                 *ngIf="formularioPassword.controls['password'].errors?.required && formularioPassword.controls['password'].touched">
                                 Campo obligatorio
                             </p>
-                        </small>
+                        </small> -->
                     </div>
                     <div class="form-group">
                         <label class="form-label d-flex justify-content-between align-items-end">
                             <div>Confirmar clave</div>
                         </label>
                         <input formControlName="passwordConfirm" name="passwordConfirm" type="password"
-                            (keydown.enter)="cambiar()" class="form-control"
+                            autocomplete="off" (keydown.enter)="finalizar()" class="form-control"
                             [ngClass]="{'is-invalid': formularioPassword.controls['passwordConfirm'].touched && formularioPassword.controls['passwordConfirm'].invalid}">
-                        <small class="invalid-feedback">
+                        <!-- <small class="invalid-feedback">
                             <p
                                 *ngIf="formularioPassword.controls['passwordConfirm'].errors?.required  && formularioPassword.controls['passwordConfirm'].touched">
                                 Campo obligatorio
                             </p>
-                        </small>
+                        </small> -->
                     </div>
                     <div class="d-flex justify-content-between align-items-center m-0 ">
                         <button type="button" class="btn btn-natura mx-auto" [ngClass]="{'disabled': loading}"
-                            (click)="cambiar()">Cambiar</button>
+                            (click)="finalizar()">Finalizar</button>
                     </div>
                 </form>
                 <!-- / Form -->
